Quick fix for navigation contrast bug

--- a/webpack/styles/navigation/_nav.scss
+++ b/webpack/styles/navigation/_nav.scss
@@ -31,6 +31,9 @@ a.cdc-brand:focus {
 .cdc-nav {
   @extend .nav;
   padding: 0px;
+  .open>a {
+    color: $cdc-dark-blue;
+  }
 }
 
 .cdc-utlt-navbar-nav {
@@ -69,7 +72,7 @@ a.cdc-brand:focus {
     .item-navbar-icon {
       margin-right: 6px;
     }
-    a:hover, a:focus, a:visited {
+    a:hover, a:focus {
       background-color: white;
       height: 60px;
     }
